Hero mobile view spacing fix

--- a/src/scss/_scalex-hero.scss
+++ b/src/scss/_scalex-hero.scss
@@ -15,6 +15,10 @@
     &__hero-main{
         padding: 6rem 0rem;
 
+        @media screen and (max-width: $bp-smallest) and (min-width: $bp-xx-small){
+              padding: 1rem 0rem 4rem 0rem
+        }
+
         &__left{
 
             &--heading{
